src/design/components/home.scss
@import "../base/_fonts";
@import "../base/_variables";
@import "../base/_base";

//* ========= reusable classes ============ */
section{
  width: 100%;
  min-height: 600px;
  margin-bottom: 50px;
}
.read-more {
  display: block;
  width: auto;
  min-width: 116px;
  height: 45px;
  margin: 0 auto;   
  padding: 0px 10px;   
  background: $secondColor;
  color: #5A88FF; /* purple blue */
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
  border-radius: 3px;
  font-size: 15px;
}

/* ========= welcome-container ============ */
.welcome-container {
  box-sizing:border-box; 
  display: block;
  position: relative;
  max-width: 100%;
  padding: 10% 15% 0 0;
  color: $secondColor;

  .title-container {
    display: block;
    text-align: right;
    width: 65%;
    margin-bottom: 5%;
  }
  h1{
    font-size: 40px;
    margin: 0.5em 0 0.5em 0;
  }
  h2{
    font-size: 20px;
    font-weight: normal;
  }
  button {
    display: block;
    right: 0;
    width: auto;
    height: 45px;
    box-sizing: border-box;
    box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.2);
    border-radius: 32px;
    font-size: 17px;
    padding: 0px 20px 0px 20px;
    font-weight: normal;

    img{
      width: 12px;
    }
  }
  #illustration{
    position: absolute;
    width: 100%;
    right: 0;
    bottom: 0;
  }
  #logo-icon{
    position: absolute;
    width: 15%;
    top: 30%;
    left: 10%;
  }
  @media only screen and (max-width: 980px) {

  }
}

/* ========= explanation-container ============ */
.explanation-container {
  ul {
    display: flex; 
    flex-direction: row;
    justify-content: space-evenly;
    align-items: baseline;
    align-content: center;
    margin: 3em auto;
    width: 70%;
  
    li {
      margin: 1em 2em;
      img {
        display: block;
        width: 80%;
        margin: 0 auto;
        background-color: #eed;
        box-shadow: 2px 2px 15px rgba(90, 136, 255, 0.35);
        -moz-box-shadow: 2px 2px 15px rgba(90, 136, 255, 0.35);
        -webkit-box-shadow: 2px 2px 15px rgba(90, 136, 255, 0.35); 
        -o-box-shadow: 2px 2px 15px rgba(90, 136, 255, 0.35);
        border-radius:100%;
      }
      span{
        font-size: 15px;
        margin-top: 0.1em;
      }
    }
  }
}

/* ========= actions-container ============ */
.actions-container ul{
  display: flex; 
  flex-direction: row;
  justify-content: space-evenly;
  align-items: unset;
  margin: 0 auto;
  width:100%;
  padding:0;

  .card {
    display: inline-block;
    width: 40%;
    margin-top: 2em;
    background: $secondColor;
    box-shadow: 2px 2px 15px rgba(90, 136, 255, 0.35);
    border-radius: 4px;
  
    .icon {
      display: block;
      margin: 2em auto;
      width: 30%;
    }
    span {
      display: block;
      width:70%;
      margin: 0.1em auto;
      font-size: 20px;
      font-weight: 600;
    }
  
    .share-dialog{
      @include center(true, false);
      position: fixed;
      top: 30%;
      
      margin: 0 auto;
      transform: translateX(-50%);
      z-index: 999;
      animation-name: fadein;
      animation-duration: 100ms;
      animation-timing-function: ease-in-out;
      background-color: #fff;
      border: 0;
      padding: 1em;
    
        box-shadow: 0 11px 15px -7px rgba(0,0,0,.2), 0 24px 38px 3px rgba(0,0,0,.14), 0 9px 46px 8px rgba(0,0,0,.12);
        min-width: 250px;
        max-width: 80%;
        max-height: 80%;
        margin: auto;
        overflow: hidden;
        border-radius: 2px;
        -webkit-backface-visibility: hidden;
        backface-visibility: hidden;
        pointer-events: auto;
        opacity: 1;
        transform-origin: center center;
        transition: opacity .15s cubic-bezier(.25,.8,.25,1),transform .2s cubic-bezier(.25,.8,.25,1);
        will-change: opacity,transform;
      @keyframes fadein {
          from { opacity: 0; }
          to   { opacity: 1; }
      }
      span{
        width: 100%;
        font-size: 25px;
      }
    
      ul{
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
        align-items: unset;
      }
    
      li{
        width:70px;
        &:hover{
          opacity: 0.8;
        }
      }
    }/*
    summary{
      display: inline-block;
      height: 0;
    }*/
    button{
      position: relative;
      width: auto;
      min-width: 20%;
      height: 45px;
      margin: 2.5em auto;
      padding: 0px 20px 0px 20px;
      box-shadow: 2px 2px 15px rgba(90, 136, 255, 0.35);
      border-radius: 5px;
      font-size: 17px;
    
      img {
        display: inline-block;
        color: $secondColor;
        vertical-align: middle;
        margin-left: 10px;
      }
    }
    .share-dialog {
      position: fixed;
      padding: 10px;
      max-width: 500px;
      top: 50%;
      left: 50%;
      transform: translate(-50%,-50%);
      background: rgba(255,255,255,.9);
      visibility: hidden;
      opacity: 0;
      /* "delay" the visibility transition */
      -webkit-transition: opacity .5s, visibility 0s linear .5s;
      transition: opacity .5s, visibility 0s linear .5s;
      z-index: 1;
    }
    .share-dialog:target {
      visibility: visible;
      opacity: 1;
      /* cancel visibility transition delay */
      -webkit-transition-delay: 0s;
      transition-delay: 0s;
    }
    .close-popup {
      background: rgba(0,0,0,.7);
      cursor: default;
      position: fixed;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      opacity: 0;
      visibility: hidden;
      /* "delay" the visibility transition */
      -webkit-transition: opacity .5s, visibility 0s linear .5s;
      transition: opacity .5s, visibility 0s linear .5s;
    }
    .share-dialog:target + .close-popup{  
      opacity: 1;
      visibility: visible;
      /* cancel visibility transition delay */
      -webkit-transition-delay: 0s;
      transition-delay: 0s;
    }
  }
}

/* ========= sponsors-container ============ */
/*
.sponsors-container{
  ul {
    width: 10%;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: space-between;
    margin: 0 auto;
  }
  li {
    width: 100%;
    margin: 1em auto;

    span {
      font-weight: bold;
      font-size: 24px;
    }
    img {
      display: block;
      width: 100%;
      margin-top: 2em;
    }
  }
}
*/
/* ========= members-container ============ */
.special-members{
  width: 70%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  margin: 0 auto;

  li {
    width: 100px;
    margin: 1em 2em;
    img {
      width: 100px;
      height: 100px;
      display: block;
      border-radius: 50%;
      margin-bottom: 0.3em;
    }
    span {
      display: block;
      width: 100%;
      font-size: 24px;
      font-weight: 500;
    }
  }
}
.members {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  align-content: center;
  margin: 2em auto;
  width: 70%;
  font-weight: normal;

  li{
    margin:0.1em;
  }
}

.ltr{
  direction: ltr;
  .explanation-container ul, .actions-container ul, .special-members{
   // flex-direction: row-reverse;
  }

/* ========= welcome-container ============ */
  .welcome-container {
    @media only screen and (min-width: 981px){
      padding: 10% 0 15% 15%;
    }
    .title-container {
      text-align: left;
    }
    button {
      float: left;
    }
    #logo-icon{
      left: auto;
      right: 10%;
    }
  }
  .actions-container ul .card button img {
      margin-left: 0;
      margin-right: 10px;
    }
}

@media only screen and (max-width: 980px){
  .welcome-container{
    padding-top: 25%;
    padding-right: 15%;
    padding-left: 15%;
    padding-bottom: 0;

    .title-container {
      width:100%;
      margin-bottom: 30%;
    }
    #logo-icon{
      display: none;
    }
  }
  .explanation-container {
    ul {
      flex-direction: column;
    }
  }

  .actions-container ul {
    flex-direction: column;
    align-items: center;
    .card {
      width: 80%;

      button {
        margin: 1em auto;
      }
    }
  }
  .special-members{
    width: 100%;
  }
}

